feat: update analysis notebooks and config

--- a/notebooks/llm_judge.ipynb
+++ b/notebooks/llm_judge.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7a38e563",
+   "metadata": {},
+   "source": [
+    "# A notebook for Testing LLM Judge Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a41e64bf",
